--- a/project.html
+++ b/project.html
@@ -488,6 +488,9 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="analysis" class="level2" data-number="2.4">
 <h2 data-number="2.4" class="anchored" data-anchor-id="analysis"><span class="header-section-number">2.4</span> Analysis</h2>
+<ul>
+<li>This bar chart exemplifies the relationship between each Borough in NYC on the x-axis and the overall average score on the y-axis. The average score is based on DBA (Doing Business As) entities. The overall average scores in decreasing order went as follows: Queens, Bronx, Staten Island, Brooklyn, Manhattan. Queens had the highest DBA average score of 11.2 and Manhattan had the lowest average at a score of 10.4</li>
+</ul>
 </section>
 <section id="amount-of-critical-critical-flag-by-boro" class="level2" data-number="2.5">
 <h2 data-number="2.5" class="anchored" data-anchor-id="amount-of-critical-critical-flag-by-boro"><span class="header-section-number">2.5</span> Amount of <code>CRITICAL</code> <code>CRITICAL FLAG</code> by <code>BORO</code></h2>
@@ -527,6 +530,9 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="analysis-1" class="level2" data-number="2.7">
 <h2 data-number="2.7" class="anchored" data-anchor-id="analysis-1"><span class="header-section-number">2.7</span> Analysis</h2>
+<ul>
+<li>This bar chart compares the relationship between specific Boroughs in NYC to the total number of critical flags in those Borough. Boroughs being on the x-axis and the critical flag variable on the y-axis. The critical flag score represents the restaurants that had an indicator of critical violation. Each critical flag counts once towards the total for the Borough it is geographically located in. The order in decreasing totals was: Manhattan, Brooklyn, Queens, Bronx, Staten Island. Manhattan had the most critical flags at a total of 3464 which will be looked at later as Manhattan has a lot more restaurants than some of the others. While Staten Island had the least amount of critical flags at 333.</li>
+</ul>
 </section>
 <section id="total-number-of-a-grade-by-boro" class="level2" data-number="2.8">
 <h2 data-number="2.8" class="anchored" data-anchor-id="total-number-of-a-grade-by-boro"><span class="header-section-number">2.8</span> Total number of A <code>GRADE</code> by <code>BORO</code></h2>
@@ -566,6 +572,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="analysis-2" class="level2" data-number="2.10">
 <h2 data-number="2.10" class="anchored" data-anchor-id="analysis-2"><span class="header-section-number">2.10</span> Analysis</h2>
+<p>-The bar chart above represents an R code used to manipulate data as well as visualize it. This manipulation is done so to exemplify the amount of restaurants that received a grade A from their inspection and summarizes and ranks each Borough based on their total number of “A” grades. With this manipulation all other grades are voided because the only desired grade for this bar chart is “A”. The ranking of Boroughs by total number of grade A’s from most to least is as follows: Manhattan, Brooklyn, Queens, Bronx, Staten Island. Manhattan had by far the most with 6382 again partially due to the sheer amount of restaurants in the Borough. Staten Island had the least amount of Grade A restaurant inspections with 645.</p>
 </section>
 <section id="total-number-of-c-grade-by-boro" class="level2" data-number="2.11">
 <h2 data-number="2.11" class="anchored" data-anchor-id="total-number-of-c-grade-by-boro"><span class="header-section-number">2.11</span> Total number of C <code>GRADE</code> by <code>BORO</code></h2>
