--- a/project.html
+++ b/project.html
@@ -572,7 +572,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="analysis-2" class="level2" data-number="2.10">
 <h2 data-number="2.10" class="anchored" data-anchor-id="analysis-2"><span class="header-section-number">2.10</span> Analysis</h2>
-<p>-The bar chart above represents an R code used to manipulate data as well as visualize it. This manipulation is done so to exemplify the amount of restaurants that received a grade A from their inspection and summarizes and ranks each Borough based on their total number of “A” grades. With this manipulation all other grades are voided because the only desired grade for this bar chart is “A”. The ranking of Boroughs by total number of grade A’s from most to least is as follows: Manhattan, Brooklyn, Queens, Bronx, Staten Island. Manhattan had by far the most with 6382 again partially due to the sheer amount of restaurants in the Borough. Staten Island had the least amount of Grade A restaurant inspections with 645.</p>
+<p>-The bar chart above represents an R code used to manipulate data as well as visualize it. This manipulation is done so to exemplify the amount of restaurants that received a grade A from their inspection and summarizes and ranks each Borough based on their total number of “A” grades. With this manipulation all other grades are voided because the only desired grade for this bar chart is “A”. Boroughs are represented on the x-axis as the y-axis represents number of total Grade A inspections in the specific Borough. The ranking of Boroughs by total number of grade A’s from most to least is as follows: Manhattan, Brooklyn, Queens, Bronx, Staten Island. Manhattan had by far the most with 6382 again partially due to the sheer amount of restaurants in the Borough. Staten Island had the least amount of Grade A restaurant inspections with 645.</p>
 </section>
 <section id="total-number-of-c-grade-by-boro" class="level2" data-number="2.11">
 <h2 data-number="2.11" class="anchored" data-anchor-id="total-number-of-c-grade-by-boro"><span class="header-section-number">2.11</span> Total number of C <code>GRADE</code> by <code>BORO</code></h2>
@@ -635,6 +635,9 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="analysis-3" class="level2" data-number="2.13">
 <h2 data-number="2.13" class="anchored" data-anchor-id="analysis-3"><span class="header-section-number">2.13</span> Analysis</h2>
+<ul>
+<li>A very similar example to the chart above. This chart instead of using data manipulation to find grade A inspection, we are looking to exemplify the inspections that recieved a “C” grade. The x-axis continues to represent the Boroughs of NYC and the y-axis this time represents the total number of restaurants that received a “C” grade in those Boroughs. No other grades are accounted for in this chart as they are dismissed. The ranking from most to least are as follows: Manhattan, Brooklyn, Queens, Bronx, Staten Island. Manhattan had a total of 97 which was the most and Staten Island had least amount of DBA’s with a a inspection grade of “C” with 5.</li>
+</ul>
 </section>
 <section id="proportion-of-c-grade-dba-in-each-boro" class="level2" data-number="2.14">
 <h2 data-number="2.14" class="anchored" data-anchor-id="proportion-of-c-grade-dba-in-each-boro"><span class="header-section-number">2.14</span> Proportion of C <code>GRADE</code> <code>DBA</code> in each <code>BORO</code></h2>
